@@ -26,11 +26,10 @@
         <guava.version>32.1.3-jre</guava.version>
         <jooq.version>3.21.6</jooq.version>
         <duckdb.version>1.4.1.0</duckdb.version>
-        <spark.version>3.5.1</spark.version>
+        <spark.version>3.5.9</spark.version>
         <grpc.version>1.65.0</grpc.version>
         <jackson.version>2.15.3</jackson.version>
         <hazelcast.version>5.6.0</hazelcast.version>
-        <substrait.version>0.91.0</substrait.version>
         <checkstyle.failOnViolation>true</checkstyle.failOnViolation>
         <!-- SonarCloud -->
         <sonar.projectKey>nsu-fit_ArrowFlight</sonar.projectKey>
@@ -96,12 +95,6 @@
             <version>${arrow.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.arrow</groupId>
-            <artifactId>arrow-dataset</artifactId>
-            <version>${arrow.version}</version>
-        </dependency>
-
         <!-- Required by DuckDB JDBC arrowExportStream. -->
         <dependency>
             <groupId>org.apache.arrow</groupId>
@@ -113,18 +106,6 @@
             <groupId>org.duckdb</groupId>
             <artifactId>duckdb_jdbc</artifactId>
             <version>${duckdb.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.substrait</groupId>
-            <artifactId>core</artifactId>
-            <version>${substrait.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.substrait</groupId>
-            <artifactId>isthmus</artifactId>
-            <version>${substrait.version}</version>
         </dependency>
 
         <dependency>
@@ -328,6 +309,7 @@
                         --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
                         --add-opens=java.base/java.lang=ALL-UNNAMED
                         --add-opens=java.base/java.util=ALL-UNNAMED
+                        --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
                         --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED
                     </argLine>
                 </configuration>
@@ -353,7 +335,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>3.6.2</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
